--- a/src/components/screens/dashboard/dashboard.css
+++ b/src/components/screens/dashboard/dashboard.css
@@ -12,6 +12,18 @@
   max-width: 100%;
 }
 
+.dashboard-buttons-container-left {
+  margin-left: 10px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.dashboard-buttons-container-right {
+  margin-right: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .nav-button {
   padding: 8px 16px;
   background-color: #f4d63d;
