--- a/src/components/screens/dashboard/dashboard.css
+++ b/src/components/screens/dashboard/dashboard.css
@@ -200,3 +200,17 @@
     grid-template-columns: 1fr;
   }
 }
+
+.dashboard-buttons-container-left {
+  margin-right: 10px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.dashboard-buttons-container-right {
+  margin-left: 10px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: flex-start;
+}
